tutorial on injecting routes

--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -226,7 +226,11 @@ Now, if your run your site using the `dev` command you should see the following 
 astro:config:setup> running command: dev
 ```
 
-### User Config
+### Extending The Integration
+
+In order to make your integration really come to life, you might want to add a few features. In the examples below, we walk you through on how to set up user config and injecting routes.
+
+#### User Config
 
 Now that you have a working integration, one thing you might want to do is to add a way for the users to configure various data. For example the config in [TailWind](/en/guides/integrations-guide/tailwind/#configuration) integration.
 
@@ -285,6 +289,66 @@ Restarting the server would print this to the console.
 astro:config:setup> running command: dev
 Hello there, Neel!
 ```
+
+#### Injecting Routes
+
+As started before, you can inject custom routes to the a user's site. This is particularly useful when you want your integration to have some sort of dashboard.
+
+To add inject a route, you would first have to create an `.astro` file in your `lib` directory.
+
+<FileTree title="Project Structure">
+- src/
+  - lib/
+    - integration.ts
+    - **Inject.astro**
+- astro.config.mjs
+- package.json
+</FileTree>
+
+```astro title="/src/lib/Inject.astro"
+
+<h1>I've been injected!</h1>
+
+```
+
+Route injections happen in the `astro:config:setup` hook.
+
+In order to inject a route, we'll have to pass the `injectRoute` parameter to our `astro:config:setup` callback function.
+
+```ts title="/src/lib/integration.ts" /injectRoute/
+
+hooks: {
+    'astro:config:setup': ({command, injectRoute}) => {
+      /* Code is poetry */
+    },
+}
+
+```
+
+Now, we can use the `injectRoute()` method to inject a route.
+
+```ts
+
+hooks: {
+    'astro:config:setup': ({command, injectRoute}) => {
+      
+      console.log(`astro:config:setup> running command: ${command}`); 
+      console.log(`Hello there, ${options.name}!`);
+
+      injectRoute({
+        pattern: '/injected',
+        entryPoint: '/src/lib/Inject.astro',
+      });
+
+   },
+}
+
+```
+
+The `pattern` property is the route that you need injected and the `entryPoint` property is the path to your `.astro` file that you want to render.
+
+Now, if you restart the server and try to visit the `/injected` path you shoud see your `.astro` file rendered!
+
 ### Going Forward
 
 Check out the [Integration API](/en/reference/integrations-reference/) reference to learn more about the integrations API to extend your integration.
