Add small improvements for why-astro page

--- a/src/pages/ar/concepts/why-astro.mdx
+++ b/src/pages/ar/concepts/why-astro.mdx
@@ -13,11 +13,11 @@ dir: rtl
 
 #### لأن استرو...
 
-1. [موجه للمحتوى](#content-focused): صُمِم استرو للمواقع التي تقدم محتوى أكثر.
-2. [يعمل على الخادم اولا ](#server-first): تعمل المواقع أسرع حين يُصير HTML على الخادم .
-3. [صُمِم ليكون سريعا](#fast-by-default): نعتقد استحالة بناء مواقع بطيئة في استرو.
-4. [سهل الاستخدام](#easy-to-use): لا يجب ان تكون خبيرا للعمل على استرو.
-5. [مليء بالمزايا، ولكن مرن](#fully-featured-but-flexible): اكثر من ١٠٠ ملحق للاختيار من بينهم.
+1. [موجه-للمحتوى](#موجه-للمحتوى): صُمِم استرو للمواقع التي تقدم محتوى أكثر.
+2. [موجه-للخادم](#موجه-للخادم): تعمل المواقع أسرع حين يُصير HTML على الخادم .
+3. [سريع تلقائيا](#سريع-تلقائيا): نعتقد استحالة بناء مواقع بطيئة في استرو.
+4. [سهل الاستخدام](#سهل-الاستخدام): لا يجب ان تكون خبيرا للعمل على استرو.
+5. [مليء بالمزايا، ولكن مرن](#مليء-بالمزايا-ولكن-مرن): اكثر من ١٠٠ ملحق للاختيار من بينهم.
 
 ## موجه للمحتوى
 
@@ -66,7 +66,7 @@ dir: rtl
 
 بدايةً تأكدنا من إمكانية استخدام أيًا من إطارات الواجهات التي تفضلها وتعرفها بالفعل. استرو يدعم React وPreact وSvelte وVue وSolid وLit وغيرهم لإنشاء مكونات واجهة جديدة في مشروع استرو.
 
-أردنا أيضا تضمين لغة رائعة لانشاء المكونات في استرو. للقيام بذلك، أنشأنا لغة الواجهات `.astro` الخاصة بنا. والمشابهة بشدة لـ HTML: وبالتالي أي كود يعمل في HTML هو بالفعل مكون Astro صالح! ولكنه أيضا يستعير بعض المميزات من لغات المكونات الأخرى مثل تعبيرات JSX في React وتحديد مجال التنسيقات (style scooping) في Svelte وVue. يسهل هذا القرب من HTML أيضا استخدام التحسين التدريجي (progressive enhancement) وأنماط إمكانية الوصول (accessibility) الشائعة دون مجهود إضافي.
+أردنا أيضا تضمين لغة رائعة لانشاء المكونات في استرو. للقيام بذلك، أنشأنا لغة الواجهات `.astro` الخاصة بنا. والمشابهة بشدة لـ HTML: وبالتالي أي كود يعمل في HTML هو بالفعل مكون Astro صالح! ولكنه أيضا يستعير بعض المميزات من لغات المكونات الأخرى مثل تعبيرات JSX في React وتحديد مجال التنسيقات (style scoping) في Svelte وVue. يسهل هذا القرب من HTML أيضا استخدام التحسين التدريجي (progressive enhancement) وأنماط إمكانية الوصول (accessibility) الشائعة دون مجهود إضافي.
 
 صُمِم استرو ليكون اقل تعقيدا من اطر الواجهات الأخرى. اهم الأسباب التي دفعتنا لذلك إن استرو يعمل على الخادم لا المتصفح. وبالتالي لا تقلق بشأن بعض تعقيدات اطر العمل الأخرى مثل: hooks و stale closures في رياكت، أو refs في Vue، أو observables في Svelte، وغيرها من الحلول التي وجدت مع نمط التفاعل (reactivity) في مكتبات الواجهات. لا يوجد تفاعل على الخادم، لذلك يذهب كل هذا التعقيد.
 
