--- a/src/pages/ar/concepts/why-astro.mdx
+++ b/src/pages/ar/concepts/why-astro.mdx
@@ -13,8 +13,8 @@ dir: rtl
 
 #### لأن استرو...
 
-1. [موجه-للمحتوى](#موجه-للمحتوى): صُمِم استرو للمواقع التي تقدم محتوى أكثر.
-2. [موجه-للخادم](#موجه-للخادم): تعمل المواقع أسرع حين يُصير HTML على الخادم .
+1. [موجه للمحتوى](#موجه-للمحتوى): صُمِم استرو للمواقع التي تقدم محتوى أكثر.
+2. [موجه للخوادم](#موجه-للخوادم): تعمل المواقع أسرع حين يُصير HTML على الخادم .
 3. [سريع تلقائيا](#سريع-تلقائيا): نعتقد استحالة بناء مواقع بطيئة في استرو.
 4. [سهل الاستخدام](#سهل-الاستخدام): لا يجب ان تكون خبيرا للعمل على استرو.
 5. [مليء بالمزايا، ولكن مرن](#مليء-بالمزايا-ولكن-مرن): اكثر من ١٠٠ ملحق للاختيار من بينهم.
@@ -32,7 +32,7 @@ dir: rtl
 :::
 
 
-## يعمل على الخادم اولا
+## موجه للخوادم
 
 **يحاول استرو تصيير الواجهات في الخادم بدلا من المتصفح قدر الإمكان.** وهذه الطريقة التي تعمل بها اطر الويب الكلاسيكية -PHP و WordPress و Laravel و Ruby on Rails، الخ.- منذ عقود. لكنك بغير حاجة إلى تعلم لغة ثانية من جانب الخادم لبدء العمل. مع استرو، لا يزال كل شيء مجرد HTML و CSS و JavaScript (أو TypeScript، إذا كنت تفضل ذلك).
 
@@ -43,7 +43,7 @@ dir: rtl
 📚 [اعرف اكثر عن ما يجعل بنية MPA من استرو فريدة من نوعها.](/ar/concepts/mpa-vs-spa/)
 
 
-## صُمِم ليكون سريعا
+## سريع تلقائيا
 
 دائما ما كان الأداء مهم، ولكنه *بالغ الأهمية* لمواقع الويب التي تركز على المحتوى. لقد ثبت أن ضعف الأداء يفقدك المشاركة والزوار والمال. على سبيل المثال:
 
