--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -105,7 +105,7 @@ Here are some tips for converting a Next `.js` component into a `.astro` compone
 
 1. Use the returned JSX of the existing Next.js component function as the basis for your HTML template.
 
-2. Change any [Next or JSX syntax to Astro](#convert-nextjs-syntax-to-astro) (e.g. `<Link>`, `<Script>`, `{children}`, `className`, inline style objects) or to HTML web standards.
+2. Change any [Next or JSX syntax to Astro](#eference-convert-nextjs-syntax-to-astro) (e.g. `<Link>`, `<Script>`, `{children}`, `className`, inline style objects) or to HTML web standards.
 
 1. Move any necessary JavaScript, including import statements, into a "code fence" (`---`). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-components/#dynamic-html) is often written inside the HTML template directly in Astro.
 
@@ -113,7 +113,7 @@ Here are some tips for converting a Next `.js` component into a `.astro` compone
 
 4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 
-See [examples from Next's starter templates converted step-by-step](#examples-from-nextjs).
+See [examples from Next's starter templates converted step-by-step](#guided-examples-see-the-steps).
 
 #### Compare: JSX vs Astro
 
