--- a/src/pages/en/guides/imports.mdx
+++ b/src/pages/en/guides/imports.mdx
@@ -88,8 +88,9 @@ import { Icon } from 'astro-icon';
 ```
 If a package was published using a legacy format, Astro will try to convert the package to ESM so that `import` statements work. In some cases, you may need to adjust your [`vite` config](/en/reference/configuration-reference/#vite) for it to work.
 
+:::caution
 Some packages rely on a browser environment. Astro components runs on the server, so importing these packages in the frontmatter may [lead to errors](/en/guides/troubleshooting/#document-or-window-is-not-defined).
-
+:::
 
 ### JSON
 
