--- a/src/pages/en/reference/integrations-reference.mdx
+++ b/src/pages/en/reference/integrations-reference.mdx
@@ -42,7 +42,7 @@ interface AstroIntegration {
     }) => void | Promise<void>;
     'astro:build:generated'?: (options: { dir: URL }) => void | Promise<void>;
     'astro:build:ssr'?: (options: { manifest: SerializedSSRManifest }) => void | Promise<void>;
-    'astro:build:done'?: (options: { pages: { pathname: string }[]; dir: URL; routes: RouteData[] }) => void | Promise<void>;
+    'astro:build:done'?: (options: { dir: URL; routes: RouteData[] }) => void | Promise<void>;
   };
 }
 ```
