quick Hippo fixes

--- a/src/pages/en/tutorial/1-setup/4.mdx
+++ b/src/pages/en/tutorial/1-setup/4.mdx
@@ -37,10 +37,10 @@ Although there are a few ways to get your local code stored in GitHub, this tuto
 
 ## Commit your local code to GitHub
 
-In the last section, you made a change to your page's content. This means that your project files have changed, and VS Code should show a number on top of the "Source" menu icon. This source tab is where you will regularly go to update your files on GitHub. 
+In the last section, you made a change to your page's content. This means that your project files have changed, and VS Code should show a number on top of the "Source" menu icon. This source tab is where you will regularly go to update your files on GitHub.
 
 
-1. Click the Source Control tab in your VS Code to see a list of files that have changed. 
+1. Click the Source Control tab in your VS Code to see a list of files that have changed. If you see a message that you need to install `git`, follow the instructions provided, then reload VS Code.
 
 2. Click the <kbd>•••</kbd> "3 dots" menu above the commit message and choose <kbd>Remote</kbd> > <kbd>Add Remote</kbd>.
 
