--- a/src/pages/en/tutorial/1-setup/index.mdx
+++ b/src/pages/en/tutorial/1-setup/index.mdx
@@ -57,7 +57,7 @@ In this unit, you will **create a new project** that is **stored online in GitHu
 
 As you write code, you will periodically commit your changes to GitHub. Netlify will use the files in your GitHub repository to build your website, and then publish it on the internet at a unique address where anyone can view it.
 
-Netlify will continuously monitor your GitHub repository for any committed changes, and will rebuild and republish your site to reflect those changes.
+Every time you commit a change to GitHub, a notification will be sent to Netlify. Then, Netlify will automatically rebuild and republish your live site to reflect those changes.
 
 
 
