fixed ghost guide issue

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -2,251 +2,11 @@
 title: Ghost & Astro
 description: Add content to your Astro project using Ghost as a CMS
 layout: ~/layouts/CMSLayout.astro
-stub: false
+stub: true
 service: Ghost
 ---
 
-import FileTree from '~/components/FileTree.astro'
-import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
-
 [Ghost](https://github.com/TryGhost/Ghost) is an open-source, headless content management system built on Node.js.
-
-## Integrating with Astro
-Ghost comes with a [content API](https://ghost.org/docs/content-api/) that would allow us to build our site with Astro. In this example, we assume that you already have a site set up with Ghost that you would like to port to Astro.
-
-### Prerequisites
-To get started you will need to have the following: 
-
-1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time.
-
-2. **A Ghost site** - It is assumed that you have a site set up with Ghost. If you don't you can set one up on a [local environmen.](https://ghost.org/docs/install/local/)
-
-3. **Content API Key** - You can make an integration under your site's `Settings > Integrations`. From there you can find your `Content API key`
-
-
-### Setting up credentials
-
-To add your site's credentials to Astro, create an `.env` file in the root of your project with the following variables:
-
-```ini title=".env"
-CONTENT_API_KEY=YOUR_API_KEY
-```
-
-Now, you should be able to use these environment variables in your project. 
-
-If you would like to have IntelliSense for your environment variable, you can create a `env.d.ts` file in the `src/` directory and configure `ImportMetaEnv` like this:
-
-```ts title="src/env.d.ts"
-interface ImportMetaEnv {
-  readonly CONTENT_API_KEY: string;
-}
-```
-:::tip
-Read more about [using environment variables](/en/guides/environment-variables/) and `.env` files in Astro.
-:::
-
-Your root directory should now include these new files:
-
-<FileTree title="Project Structure">
-- src/
-  - **env.d.ts**
-- **.env**
-- astro.config.mjs
-- package.json
-</FileTree>
-
-### Installing dependencies
-
-To connect with your Contentful space, install both of the following using the single command below for your preferred package manager:
-- [`@tryghost/content-api`](https://www.npmjs.com/package/@tryghost/content-api), the official content API wrapper for JavaScript
-
-<PackageManagerTabs>
-  <Fragment slot="npm">
-  ```shell
-  npm install contentful @tryghost/content-api
-  ```
-  </Fragment>
-  <Fragment slot="pnpm">
-  ```shell
-  pnpm install contentful @tryghost/content-api
-  ```
-  </Fragment>
-  <Fragment slot="yarn">
-  ```shell
-  yarn add contentful @tryghost/content-api
-  ```
-  </Fragment>
-</PackageManagerTabs>
-
-## Making a blog with Astro and Ghost
-
-This example fetches data from a local installation of Ghost.
-
-This example shows how to reproduce this site structure in Astro: an index page that lists posts with links to dynamically-generated individual post pages.
-
-### Fetching Data
-
-You can fetch your site's data with the Ghost content API package.
-
-First, create an `api.ts` file under a `lib` directory.
-
-<FileTree title="Project Structure">
-- src/
-  - lib/
-    - **api.ts**
-  - pages/
-    - **index.astro**
-- astro.config.mjs
-- package.json
-</FileTree>
-
-```ts title="src/lib/api.ts"
-
-import GhostContentAPI from '@tryghost/content-api';
-
-// Create API instance with site credentials
-export const api = new GhostContentAPI({
-    url: 'http://localhost:2368', // This is the URL if your site is running on a local environment
-    key: import.meta.env.CONTENT_API_KEY,
-    version: 'v5.0',
-});
-
-```
-
-Here, we first initialize an API instance with the Ghost API. Using the API key we got from our dashboard's Integrations page.
-
-### Displaying a list of posts
-
-The page `src/pages/index.astro` lists each post, with a description and link to its own page.
-
-<FileTree title="Project Structure">
-- src/
- - lib/
-    - api.ts
-  - pages/
-    - **index.astro**
-- astro.config.mjs
-- package.json
-</FileTree>
-
-In the Astro frontmatter, we first import our API instance. This would allow us to use the `posts.browse()` method to brows the posts. We're setting the `limit` to `all` to get all of our blog posts.
-
-```astro title="src/pages/index.astro"
----
-import { api } from '../lib/api';
-const posts = await api.posts
-    .browse({
-        limit: 'all',
-    })
-    .catch((err) => {
-        console.error(err);
-    });
----
-```
-
-Fetching post via the content API returns an object that includes the properties:
-- `title` - Contains the title of the post
-- `html` - Contains the HTML rendering of the content of the post
-- `feature_image` - Contains the source URL of the featured image of the post
-- `slug` - Contains the slug of the post
-
-Now, we can render our posts to HTML.
-
-```astro title="src/pages/index.astro"
-<html lang="en">
-    <head>
-        <title>Astro + Ghost 👻</title>
-    </head>
-    <body>
-
-        {
-            posts.map((post) => (
-                <>
-                    <a href={`/post/${post.slug}`}>
-                        <h1> {post.title} </h1>
-                    </a>
-                </>
-            ))
-        }
-    </body>
-</html>
-```
-
-### Using the Ghost Content API to generate pages
-
-The page `src/pages/post/[slug].astro` [dynamically generates a page](/en/core-concepts/routing/#dynamic-routes) for each post.
-
-<FileTree title="Project Structure">
-- src/
- - lib/
-    - api.ts
-  - pages/
-    - index.astro
-    - post/
-      - **[slug].astro**
-- astro.config.mjs
-- package.json
-</FileTree>
-
-Just like the [index page](#displaying-a-list-of-posts), we'll first import our API instance. Following which, we'll have access to the `posts.browse()` method.
-
-Here, we're getting the posts and returning each single post in the [props](/en/tutorial/5-astro-api/2/#use-props-in-dynamic-routes).
-
-```astro title="src/pages/post/[slug].astro"
----
-import { api } from '../../lib/api';
-
-// getStaticPaths() is required for static Astro sites
-// if using SSR, you will not need this function
-export async function getStaticPaths() {
-    const posts = await api.posts
-        .browse({
-            limit: 'all',
-        })
-        .catch((err) => {
-            console.error(err);
-        });
-
-    return posts.map((post) => {
-        return {
-            params: {
-                slug: post.slug,
-            },
-            props: {
-                post: post,
-            },
-        };
-    });
-}
-
-const { post } = Astro.props;
----
-```
-
-Now, we can render the post in HTML.
-
-```astro 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>{post.title}</title>
-    </head>
-    <body>
-        <img src={post.feature_image} alt={post.title} />
-
-        <h1>{post.title}</h1>
-        <p>{post.reading_time} min read</p> <!-- This property returns the estimated reading time in minutes -->
-
-        <Fragment set:html={post.html} />
-    </body>
-</html>
-```
-:::note
-`<Fragment />` is a built in Astro component which allows you to avoid an unnecessary wrapper element. This can be especially useful when fetching HTML from a CMS (e.g. Ghost or [WordPress](/en/guides/cms/wordpress/)).
-:::
-
-### Publishing your site
-To deploy your site visit our [deployment guide](/en/guides/deploy/) and follow the instructions for your preferred hosting provider.
 
 ## Community Resources 
 
