--- a/src/pages/en/guides/deploy/vercel.mdx
+++ b/src/pages/en/guides/deploy/vercel.mdx
@@ -82,4 +82,4 @@ After your project has been imported and deployed, all subsequent pushes to bran
 The `vercel.json` configuration file lets you configure, and override the default behavior of Vercel from within your project.
 Additionaly it is also possible to attach headers to HTTP responses from your Deployments. 
 
-📚 Learn more about Vercel’s [Project config](https://vercel.com/docs/project-configuration)
+📚 Learn more about [Vercel’s project configuration](https://vercel.com/docs/project-configuration).
