--- a/src/pages/en/guides/deploy/vercel.mdx
+++ b/src/pages/en/guides/deploy/vercel.mdx
@@ -79,7 +79,6 @@ After your project has been imported and deployed, all subsequent pushes to bran
 
 ### Project config with vercel.json
 
-The `vercel.json` configuration file lets you configure, and override the default behavior of Vercel from within your project.
-Additionaly it is also possible to attach headers to HTTP responses from your Deployments. 
+You can use `vercel.json` to override the default behavior of Vercel and to configure additional settings. For example, you may wish to attach headers to HTTP responses from your Deployments. 
 
 📚 Learn more about [Vercel’s project configuration](https://vercel.com/docs/project-configuration).
