Remove experimental warning

--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -101,7 +101,7 @@ You can also add an adapter manually by installing the package and updating `ast
 
 Astro will remain a static-site generator by default. But once you enable a server-side rendering adapter, **every route in your pages directory defaults to a server-rendered route** and a few new features become available to you.
 
-### Prerendering (Experimental)
+### Prerendering
 
 <Since v="2.0.0-beta.0" />
 
