new: add section on extending markdown from MDX

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -423,8 +423,6 @@ Markdown support in Astro is powered by [remark](https://remark.js.org/), a powe
 
 Astro applies the [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) plugin by default. This brings some niceties like generating clickable links from text.
 
-By default, Astro's MDX integration inherits all Markdown configuration from your Astro config `markdown` options. To change this behavior, configure [`extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) in your `mdx` integration.
-
 You can customize how remark parses your Markdown in `astro.config.mjs`. See the full list of [Markdown configuration options](/en/reference/configuration-reference/#markdown-options).
 
 ### Markdown Plugins
@@ -575,6 +573,58 @@ const { minutesRead } = Astro.props.frontmatter;
     <slot />
   </body>
 </html>
+```
+
+### Extending Markdown config from MDX
+
+By default, Astro's MDX integration will extend [your project's existing Markdown configuration](https://docs.astro.build/en/reference/configuration-reference/#markdown-options). To override individual options, you can specify their equivalent in your MDX configuration.
+
+For example, say you need to disable GitHub-Flavored Markdown and apply a different set of remark plugins for MDX files. You can apply these options like so, with [the `extendMarkdownConfig` option](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) enabled by default:
+
+```ts
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+import mdx from '@astrojs/mdx';
+
+export default defineConfig({
+  markdown: {
+    syntaxHighlight: 'prism',
+    remarkPlugins: [remarkPlugin1],
+    githubFlavoredMarkdown: true,
+  },
+  integrations: [
+    mdx({
+      // `syntaxHighlight` inherited from Markdown
+
+      // Markdown `remarkPlugins` ignored,
+      // only `remarkPlugin2` applied.
+      remarkPlugins: [remarkPlugin2],
+      // `githubFlavoredMarkdown` overridden to `false`
+      githubFlavoredMarkdown: false,
+    })
+  ]
+});
+```
+
+You may also need to disable `markdown` config extension in MDX. For this, set `extendMarkdownConfig` to `false`:
+
+```ts
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+import mdx from '@astrojs/mdx';
+
+export default defineConfig({
+  markdown: {
+    remarkPlugins: [remarkPlugin1],
+  },
+  integrations: [
+    mdx({
+      // Markdown config now ignored
+      extendMarkdownConfig: false,
+      // No `remarkPlugins` applied
+    })
+  ]
+});
 ```
 
 ### Syntax Highlighting
