--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -579,7 +579,7 @@ const { minutesRead } = Astro.props.frontmatter;
 
 By default, Astro's MDX integration will extend [your project's existing Markdown configuration](https://docs.astro.build/en/reference/configuration-reference/#markdown-options). To override individual options, you can specify their equivalent in your MDX configuration.
 
-For example, say you need to disable GitHub-Flavored Markdown and apply a different set of remark plugins for MDX files. You can apply these options like so, with [the `extendMarkdownConfig` option](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) enabled by default:
+For example, say you need to disable GitHub-Flavored Markdown and apply a different set of remark plugins for MDX files. You can apply these options like so:
 
 ```ts
 // astro.config.mjs
@@ -606,7 +606,7 @@ export default defineConfig({
 });
 ```
 
-You may also need to disable `markdown` config extension in MDX. For this, set `extendMarkdownConfig` to `false`:
+You may also prefer to disable Markdown config extension. For this, you can set [the `extendMarkdownConfig` option](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) option to `false`:
 
 ```ts
 // astro.config.mjs
@@ -615,7 +615,7 @@ import mdx from '@astrojs/mdx';
 
 export default defineConfig({
   markdown: {
-    remarkPlugins: [remarkPlugin1],
+    remarkPlugins: [remarkPlugin],
   },
   integrations: [
     mdx({
