edit: remove old remark extension behavior

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -431,9 +431,7 @@ Astro supports adding third-party [remark](https://github.com/remarkjs/remark) a
 
 We encourage you to browse [awesome-remark](https://github.com/remarkjs/awesome-remark) and [awesome-rehype](https://github.com/rehypejs/awesome-rehype) for popular plugins! See each plugin's own README for specific installation instructions.
 
-Any additional plugins you apply in your MDX config will be applied *after* your configured Markdown plugins, and will apply only to `.mdx` files. 
-
-This example applies [`remark-toc`](https://github.com/remarkjs/remark-toc) to Markdown *and* MDX, and [`rehype-accessible-emojis`](https://www.npmjs.com/package/rehype-accessible-emojis) to MDX only, while preserving Astro's default plugins:
+This example applies [`remark-toc`](https://github.com/remarkjs/remark-toc) and [`rehype-accessible-emojis`](https://www.npmjs.com/package/rehype-accessible-emojis) to both Markdown and MDX files:
 
 ```js title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
@@ -443,12 +441,8 @@ import { rehypeAccessibleEmojis } from 'rehype-accessible-emojis';
 export default {
   markdown: {
     // Applied to .md and .mdx files
-    remarkPlugins: [remarkToc],
+    remarkPlugins: [remarkToc, rehypeAccessibleEmojis],
   },
-  integrations: [mdx({
-    // Applied to .mdx files only
-    rehypePlugins: [rehypeAccessibleEmojis],
-  })],
 }
 ```
 
