edit: MDX ex preamble

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -573,7 +573,7 @@ const { minutesRead } = Astro.props.frontmatter;
 
 Astro's MDX integration will extend [your project's existing Markdown configuration](https://docs.astro.build/en/reference/configuration-reference/#markdown-options) by default. To override individual options, you can specify their equivalent in your MDX configuration.
 
-For example, say you need to disable GitHub-Flavored Markdown and apply a different set of remark plugins for MDX files. You can apply these options like so:
+For example, to disable GitHub-Flavored Markdown and apply a different set of remark plugins for MDX files only:
 
 ```ts
 // astro.config.mjs
