edit: add (enabled by default)

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -577,7 +577,7 @@ For example, to disable GitHub-Flavored Markdown and apply a different set of re
 
 ```ts
 // astro.config.mjs
-import { defineConfig } from 'astro/config';
+import { defineConfig } froAm 'astro/config';
 import mdx from '@astrojs/mdx';
 
 export default defineConfig({
@@ -600,7 +600,7 @@ export default defineConfig({
 });
 ```
 
-You may also prefer to disable Markdown config extension. For this, you can set [the `extendMarkdownConfig` option](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) option to `false`:
+You may also prefer to disable Markdown config extension. For this, you can set [the `extendMarkdownConfig` option](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) (enabled by default) to `false`:
 
 ```ts
 // astro.config.mjs
