--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -573,7 +573,7 @@ const { minutesRead } = Astro.props.frontmatter;
 
 Astro's MDX integration will extend [your project's existing Markdown configuration](/en/reference/configuration-reference/#markdown-options) by default. To override individual options, you can specify their equivalent in your MDX configuration.
 
-For example, to disable GitHub-Flavored Markdown and apply a different set of remark plugins for MDX files only:
+The following example disables GitHub-Flavored Markdown and applies a different set of remark plugins for MDX files:
 
 ```ts
 // astro.config.mjs
