edit: githubFlavoredMarkdown -> gfm

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -584,7 +584,7 @@ export default defineConfig({
   markdown: {
     syntaxHighlight: 'prism',
     remarkPlugins: [remarkPlugin1],
-    githubFlavoredMarkdown: true,
+    gfm: true,
   },
   integrations: [
     mdx({
@@ -593,8 +593,8 @@ export default defineConfig({
       // Markdown `remarkPlugins` ignored,
       // only `remarkPlugin2` applied.
       remarkPlugins: [remarkPlugin2],
-      // `githubFlavoredMarkdown` overridden to `false`
-      githubFlavoredMarkdown: false,
+      // `gfm` overridden to `false`
+      gfm: false,
     })
   ]
 });
