--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -105,7 +105,7 @@ Astro will remain a static-site generator by default. But once you enable a serv
 
 <Since v="2.0.0-beta.0" />
 
-Any file in the `pages/` directory can opt-in to prerendering, or standard static build-time behavior, by including the following line.
+Any `.astro` file within the `pages/` directory can opt-in to prerendering, or standard static build-time behavior, by including the following line.
 
 ```astro title="src/pages/index.astro" {2}
 ---
