Additional info about vercel deployment project config (#2263) (#2264)
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/deploy/vercel.mdx
+++ b/src/pages/en/guides/deploy/vercel.mdx
@@ -76,3 +76,9 @@ After your project has been imported and deployed, all subsequent pushes to bran
 3. When asked `Want to override the settings? [y/N]`, choose `N`.
 4. Your application is deployed! (e.g. [astro.vercel.app](https://astro.vercel.app/))
 
+
+### Project config with vercel.json
+
+You can use `vercel.json` to override the default behavior of Vercel and to configure additional settings. For example, you may wish to attach headers to HTTP responses from your Deployments. 
+
+📚 Learn more about [Vercel’s project configuration](https://vercel.com/docs/project-configuration).
