ci: update reference docs

--- a/src/pages/en/reference/configuration-reference.mdx
+++ b/src/pages/en/reference/configuration-reference.mdx
@@ -448,10 +448,6 @@ Which syntax highlighter to use, if any.
 
 Pass [remark plugins](https://github.com/remarkjs/remark) to customize how your Markdown is built. You can import and apply the plugin function (recommended), or pass the plugin name as a string.
 
-:::caution
-Providing a list of plugins will **remove** our default plugins. To preserve these defaults, see the [`extendDefaultPlugins`](#markdownextenddefaultplugins) flag.
-:::
-
 ```js
 import remarkToc from 'remark-toc';
 {
@@ -471,10 +467,6 @@ import remarkToc from 'remark-toc';
 
 Pass [rehype plugins](https://github.com/remarkjs/remark-rehype) to customize how your Markdown's output HTML is processed. You can import and apply the plugin function (recommended), or pass the plugin name as a string.
 
-:::caution
-Providing a list of plugins will **remove** our default plugins. To preserve these defaults, see the [`extendDefaultPlugins`](#markdownextenddefaultplugins) flag.
-:::
-
 ```js
 import rehypeMinifyHtml from 'rehype-minify';
 {
@@ -485,22 +477,20 @@ import rehypeMinifyHtml from 'rehype-minify';
 ```
 
 
-### markdown.extendDefaultPlugins
+### markdown.gfm
 
 <p>
 
 **Type:** `boolean`<br />
-**Default:** `false`
+**Default:** `true`
 </p>
 
-Astro applies the [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) and [Smartypants](https://github.com/silvenon/remark-smartypants) plugins by default. When adding your own remark or rehype plugins, you can preserve these defaults by setting the `extendDefaultPlugins` flag to `true`:
+Astro uses [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) by default. To disable this, set the `gfm` flag to `false`:
 
 ```js
 {
   markdown: {
-    extendDefaultPlugins: true,
-		 remarkPlugins: [exampleRemarkPlugin],
-    rehypePlugins: [exampleRehypePlugin],
+    gfm: false,
   }
 }
 ```
@@ -546,20 +536,7 @@ Pass additional configuration options to Vite. Useful when Astro doesn't support
 
 View the full `vite` configuration object documentation on [vitejs.dev](https://vitejs.dev/config/).
 
-A common use case is to pass a package name to [`vite.ssr.noExternal`](https://vitejs.dev/config/ssr-options.html#ssr-noexternal) to prevent it from being [externalized](https://vitejs.dev/guide/ssr.html#ssr-externals).
-
 #### Examples
-
-```js
-{
-  vite: {
-    ssr: {
-      // Example: Force a broken package to be transformed for SSR
-      noExternal: ['broken-npm-package'],
-    }
-  }
-}
-```
 
 ```js
 {
@@ -615,50 +592,6 @@ To enable this behavior, set `legacy.astroFlavoredMarkdown` to `true` in your [`
 
 Astro offers experimental flags to give users early access to new features.
 These flags are not guaranteed to be stable.
-
-### experimental.errorOverlay
-
-<p>
-
-**Type:** `boolean`<br />
-**Default:** `false`<br />
-<Since v="1.7.0" />
-</p>
-
-Turn on experimental support for the new error overlay component.
-
-To enable this feature, set `experimental.errorOverlay` to `true` in your Astro config:
-
-```js
-{
-	experimental: {
-		errorOverlay: true,
-	},
-}
-```
-
-
-### experimental.prerender
-
-<p>
-
-**Type:** `boolean`<br />
-**Default:** `false`<br />
-<Since v="1.7.0" />
-</p>
-
-Enable experimental support for prerendered pages when generating a server.
-
-To enable this feature, set `experimental.prerender` to `true` in your Astro config:
-
-```js
-{
-	experimental: {
-		prerender: true,
-	},
-}
-```
-
 
 ### experimental.contentCollections
 
