--- a/src/pages/pt-br/guides/client-side-scripts.mdx
+++ b/src/pages/pt-br/guides/client-side-scripts.mdx
@@ -63,7 +63,7 @@ Você pode desejar escrever seus scripts como arquivos `.js`/`.ts` separados ou 
 
 **Quando utilizar isto:** Se o seu script está dentro de `src/`.
 
-Astro irá fazer a build, otimizar e adicionar esses scripts a página para você, seguindo suas [regras de bundling de script](#bundling-script).
+Astro irá fazer a build, otimizar e adicionar esses scripts a página para você, seguindo suas [regras de bundling de script](#bundling-do-script).
 
 ```astro title="src/components/ScriptsLocais.astro"
 <!-- caminho relativo ao script em `src/scripts/local.js` -->
