Injected frontmatter change (#2250)
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -3,8 +3,9 @@ layout: ~/layouts/MainLayout.astro
 title: Markdown & MDX
 description: Learn how to create content using Markdown or MDX with Astro
 i18nReady: true
-setup: import Since from '~/components/Since.astro'
 ---
+
+import Since from '~/components/Since.astro'
 
 [Markdown](https://daringfireball.net/projects/markdown/) is commonly used to author text-heavy content like blog posts and documentation. Astro includes built-in support for standard Markdown files. 
 
@@ -468,7 +469,7 @@ export default {
 }
 ```
 
-#### Example: Injecting frontmatter
+### Modifying frontmatter programmatically
 
 You can add frontmatter properties to all of your Markdown and MDX files by using a [remark or rehype plugin](#markdown-plugins).
 
@@ -482,6 +483,12 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
       }
     }
     ```
+
+    :::tip
+    <Since v="2.0.0" />
+
+    `data.astro.frontmatter` contains all properties from a given Markdown or MDX document. This allows you to modify existing frontmatter properties, or compute new properties from this existing frontmatter.
+    :::
 
 2. Apply this plugin to your `markdown`  or `mdx` integration config:
 
