--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -830,14 +830,14 @@ A function to compile a given Markdown or MDX document for rendering. This retur
 
 - `<Content />` - A component used to render the document's contents in an Astro file.
 - `headings` - A generated list of headings, [mirroring Astro's `getHeadings()` utility](/en/guides/markdown-content/#exported-properties) on Markdown and MDX imports.
-- `injectedFrontmatter ` - An object of frontmatter [injected via remark or rehype plugins](/en/guides/markdown-content/#example-injecting-frontmatter). Set to type `any`.
+- `remarkPluginFrontmatter ` - The modified frontmatter object after any [remark or rehype plugins have been applied](/en/guides/markdown-content/#modifying-frontmatter-programmatically). Set to type `any`.
 
 ```astro
 ---
 import { getEntry } from 'astro:content';
 const entry = await getEntry('blog', 'entry-1.md');
 
-const { Content, headings, injectedFrontmatter } = await entry.render();
+const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 ---
 ```
 
