Fix integrations absolute links and changelog generation errors

--- a/src/pages/en/guides/integrations-guide/image.mdx
+++ b/src/pages/en/guides/integrations-guide/image.mdx
@@ -255,7 +255,7 @@ A `number` can also be provided, useful when the aspect ratio is calculated at b
 
 </p>
 
-> This is not supported by the default Squoosh service. See the [installation section](https://github.com/withastro/astro/tree/main/packages/integrations/image/#installing-sharp-optional) for details on using the `sharp` service instead.
+> This is not supported by the default Squoosh service. See the [installation section](#installing-sharp-optional) for details on using the `sharp` service instead.
 
 The background color is used to fill the remaining background when using `contain` for the `fit` property.
 
@@ -278,7 +278,7 @@ color representation with 3 or 6 hexadecimal characters in the form `#123[abc]`,
 
 </p>
 
-> This is not supported by the default Squoosh service. See the [installation section](https://github.com/withastro/astro/tree/main/packages/integrations/image/#installing-sharp-optional) for details on using the `sharp` service instead.
+> This is not supported by the default Squoosh service. See the [installation section](#installing-sharp-optional) for details on using the `sharp` service instead.
 
 How the image should be resized to fit both `height` and `width`.
 
@@ -291,7 +291,7 @@ How the image should be resized to fit both `height` and `width`.
 
 </p>
 
-> This is not supported by the default Squoosh service. See the [installation section](https://github.com/withastro/astro/tree/main/packages/integrations/image/#installing-sharp-optional) for details on using the `sharp` service instead.
+> This is not supported by the default Squoosh service. See the [installation section](#installing-sharp-optional) for details on using the `sharp` service instead.
 
 Position of the crop when fit is `cover` or `contain`.
 
@@ -399,7 +399,7 @@ For remote images, the original image format is unknown. If not provided, only `
 
 </p>
 
-> This is not supported by the default Squoosh service. See the [installation section](https://github.com/withastro/astro/tree/main/packages/integrations/image/#installing-sharp-optional) for details on using the `sharp` service instead.
+> This is not supported by the default Squoosh service. See the [installation section](#installing-sharp-optional) for details on using the `sharp` service instead.
 
 The background color to use for replacing the alpha channel with `sharp`'s `flatten` method. In case the output format
 doesn't support transparency (i.e. `jpeg`), it's advisable to include a background color, otherwise black will be used
@@ -420,7 +420,7 @@ color representation with 3 or 6 hexadecimal characters in the form `#123[abc]`,
 
 </p>
 
-> This is not supported by the default Squoosh service. See the [installation section](https://github.com/withastro/astro/tree/main/packages/integrations/image/#installing-sharp-optional) for details on using the `sharp` service instead.
+> This is not supported by the default Squoosh service. See the [installation section](#installing-sharp-optional) for details on using the `sharp` service instead.
 
 How the image should be resized to fit both `height` and `width`.
 
@@ -435,7 +435,7 @@ How the image should be resized to fit both `height` and `width`.
 
 </p>
 
-> This is not supported by the default Squoosh service. See the [installation section](https://github.com/withastro/astro/tree/main/packages/integrations/image/#installing-sharp-optional) for details on using the `sharp` service instead.
+> This is not supported by the default Squoosh service. See the [installation section](#installing-sharp-optional) for details on using the `sharp` service instead.
 
 Position of the crop when fit is `cover` or `contain`.
 
