--- a/src/pages/en/guides/integrations-guide/mdx.mdx
+++ b/src/pages/en/guides/integrations-guide/mdx.mdx
@@ -78,7 +78,7 @@ export default defineConfig({
 
 ## Usage
 
-With the Astro MDX integration, you can [add MDX pages to your project](https://github.com/withastro/astro/tree/main/packages/integrations/mdx/en/guides/markdown-content/#markdown-and-mdx-pages) by adding `.mdx` files within your `src/pages/` directory. You can also [import `.mdx` files](/en/guides/markdown-content/#importing-markdown) into `.astro` files.
+With the Astro MDX integration, you can [add MDX pages to your project](/en/guides/markdown-content/#markdown-and-mdx-pages) by adding `.mdx` files within your `src/pages/` directory. You can also [import `.mdx` files](/en/guides/markdown-content/#importing-markdown) into `.astro` files.
 
 Astro's MDX integration adds extra features to standard MDX, including Markdown-style frontmatter. This allows you to use most of Astro's built-in Markdown features like a [special frontmatter `layout` property](/en/guides/markdown-content/#frontmatter-layout) and a [property for marking a page as a draft](/en/guides/markdown-content/#draft-pages).
 
@@ -92,13 +92,13 @@ Once the MDX integration is installed, no configuration is necessary to use `.md
 
 You can configure how your MDX is rendered with the following options:
 
-*   [Options inherited from Markdown config](https://github.com/withastro/astro/tree/main/packages/integrations/mdx/#options-inherited-from-markdown-config)
-*   [`extendMarkdownConfig`](https://github.com/withastro/astro/tree/main/packages/integrations/mdx/#extendmarkdownconfig)
-*   [`recmaPlugins`](https://github.com/withastro/astro/tree/main/packages/integrations/mdx/#recmaplugins)
+*   [Options inherited from Markdown config](#options-inherited-from-markdown-config)
+*   [`extendMarkdownConfig`](#extendmarkdownconfig)
+*   [`recmaPlugins`](#recmaplugins)
 
 ### Options inherited from Markdown config
 
-All [`markdown` configuration options](/en/reference/configuration-reference/#markdown-options) except `drafts` can be configured separately in the MDX integration. This includes remark and rehype plugins, syntax highlighting, and more. Options will default to those in your Markdown config ([see the `extendMarkdownConfig` option](https://github.com/withastro/astro/tree/main/packages/integrations/mdx/#extendmarkdownconfig) to modify this).
+All [`markdown` configuration options](/en/reference/configuration-reference/#markdown-options) except `drafts` can be configured separately in the MDX integration. This includes remark and rehype plugins, syntax highlighting, and more. Options will default to those in your Markdown config ([see the `extendMarkdownConfig` option](#extendmarkdownconfig) to modify this).
 
 :::note
 There is no separate MDX configuration for [including pages marked as draft in the build](/en/reference/configuration-reference/#markdowndrafts). This Markdown setting will be respected by both Markdown and MDX files and cannot be overriden for MDX files specifically.
@@ -210,6 +210,6 @@ This package is maintained by Astro's Core team. You're welcome to submit an iss
 
 See [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/mdx/CHANGELOG.md) for a history of changes to this integration.
 
-[astro-integration]: https://github.com/withastro/astro/tree/main/packages/integrations/mdx/en/guides/integrations-guide/
+[astro-integration]: /en/guides/integrations-guide/
 
-[astro-ui-frameworks]: https://github.com/withastro/astro/tree/main/packages/integrations/mdx/en/core-concepts/framework-components/#using-framework-components
+[astro-ui-frameworks]: /en/core-concepts/framework-components/#using-framework-components
