--- a/src/pages/en/reference/errors/invalid-frontmatter-injection-error.mdx
+++ b/src/pages/en/reference/errors/invalid-frontmatter-injection-error.mdx
@@ -20,6 +20,6 @@ import DontEditWarning from '../../../../components/DontEditWarning.astro'
 A remark or rehype plugin attempted to inject invalid frontmatter. This occurs when "astro.frontmatter" is set to `null`, `undefined`, or an invalid JSON object.
 
 **See Also:**
--  [Frontmatter injection](/en/guides/markdown-content/#example-injecting-frontmatter)
+-  [Modifying frontmatter programmatically](/en/guides/markdown-content/#modifying-frontmatter-programmatically)
 
 
