--- a/src/pages/en/guides/cms/keystonejs.mdx
+++ b/src/pages/en/guides/cms/keystonejs.mdx
@@ -2,7 +2,7 @@
 title: KeystoneJS & Astro
 description: Add content to your Astro project using KeystoneJS as a CMS
 layout: ~/layouts/CMSLayout.astro
-stub: false
+stub: true
 service: KeystoneJS
 ---
 
