--- a/src/pages/ja/guides/integrations-guide.mdx
+++ b/src/pages/ja/guides/integrations-guide.mdx
@@ -115,7 +115,7 @@ integrations: [
 
 ### インテグレーションの切り替え
 
-Falsyなインテグレーションは無視されるため、`undefined`や真偽値が設定されてしまうことを気にすることなく、インテグレーションのオンとオフを切り替えることができます。
+Falsyなインテグレーションは無視されるため、`undefined`や真偽値が設定されてしまうことを気にすることなく、インテグレーションのオンとオフを切り替えられます。
 
 ```js
 integrations: [
