--- a/src/pages/ja/guides/integrations-guide.mdx
+++ b/src/pages/ja/guides/integrations-guide.mdx
@@ -132,4 +132,4 @@ integrations: [
 
 AstroのインテグレーションAPIはRollupとViteに影響を受けており、RollupやViteのプラグインを書いたことがある人なら誰でも親しみやすいように設計されています。
 
-[インテグレーションAPI](/ja/reference/integrations-reference/)を確認し、インテグレーションができること、自分で作成する方法について学んでみてください。
+[インテグレーションAPI](/ja/reference/integrations-reference/)リファレンスを確認し、インテグレーションができること、自分で作成する方法について学んでみてください。
