--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -26,13 +26,10 @@ To get started you will need to have the following:
 
 ### Setting up credentials
 
-To add your site's credentials to Astro, create an `.env` file in the root of your project with the following variables:
+To add your site's credentials to Astro, create an `.env` file in the root of your project with the following variable:
 
 ```ini title=".env"
 CONTENT_API_KEY=YOUR_API_KEY
-```
-
-Now, you should be able to use these environment variables in your project. 
 
 If you would like to have IntelliSense for your environment variable, you can create a `env.d.ts` file in the `src/` directory and configure `ImportMetaEnv` like this:
 
