--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -54,8 +54,7 @@ Your root directory should now include these new files:
 
 ### Installing dependencies
 
-To connect with your Contentful space, install both of the following using the single command below for your preferred package manager:
-- [`@tryghost/content-api`](https://www.npmjs.com/package/@tryghost/content-api), the official content API wrapper for JavaScript
+To connect with Ghost, install the official content API wrapper [`@tryghost/content-api`](https://www.npmjs.com/package/@tryghost/content-api) using the command below for your preferred package manager:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
