--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -83,7 +83,7 @@ With the setup above, you are now able to create a blog that uses Ghost as the C
 1. A Ghost blog 
 2. An Astro project integrated with the [Ghost content API](https://www.npmjs.com/package/@tryghost/content-api) - See [integrating with Astro](/en/guides/cms/ghost/#integrating-with-astro) for more details on how to set up an Astro project with Ghost.
 
-This example shows how to reproduce this site structure in Astro: an index page that lists posts with links to dynamically-generated individual post pages.
+This example will create an index page that lists posts with links to dynamically-generated individual post pages.
 
 ### Fetching Data
 
