--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -96,7 +96,7 @@ First, create an `api.ts` file under a `lib` directory.
   - lib/
     - **api.ts**
   - pages/
-    - **index.astro**
+    - index.astro
 - astro.config.mjs
 - package.json
 </FileTree>
