--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -172,7 +172,7 @@ Now, we can render our posts to HTML.
 </html>
 ```
 
-### Using the Ghost Content API to generate pages
+### Generating pages
 
 The page `src/pages/post/[slug].astro` [dynamically generates a page](/en/core-concepts/routing/#dynamic-routes) for each post.
 
