--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -101,6 +101,8 @@ First, create an `api.ts` file under a `lib` directory.
 - package.json
 </FileTree>
 
+Initialize an API instance with the Ghost API using the API key from the Ghost dashboard's Integrations page.
+
 ```ts title="src/lib/api.ts"
 
 import GhostContentAPI from '@tryghost/content-api';
