--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -119,7 +119,7 @@ export const api = new GhostContentAPI({
 
 ### Displaying a list of posts
 
-The page `src/pages/index.astro` lists each post, with a description and link to its own page.
+The page `src/pages/index.astro` will list post, with a description and link to its own page.
 
 <FileTree title="Project Structure">
 - src/
