--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -131,7 +131,7 @@ The page `src/pages/index.astro` will list post, with a description and link to 
 - package.json
 </FileTree>
 
-In the Astro frontmatter, we first import our API instance. This would allow us to use the `posts.browse()` method to brows the posts. We're setting the `limit` to `all` to get all of our blog posts.
+Import the API in the Astro frontmatter to use the `posts.browse()` method to access blog posts from Ghost. Set `limit: all` to retrieve all posts.
 
 ```astro title="src/pages/index.astro"
 ---
