--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -146,7 +146,7 @@ const posts = await api.posts
 ---
 ```
 
-Fetching post via the content API returns an object that includes the properties:
+Fetching via the content API returns an array of object that includes the following properties for each post:
 - `title` - Contains the title of the post
 - `html` - Contains the HTML rendering of the content of the post
 - `feature_image` - Contains the source URL of the featured image of the post
