--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -147,10 +147,10 @@ const posts = await api.posts
 ```
 
 Fetching via the content API returns an array of object that includes the following properties for each post:
-- `title` - Contains the title of the post
-- `html` - Contains the HTML rendering of the content of the post
-- `feature_image` - Contains the source URL of the featured image of the post
-- `slug` - Contains the slug of the post
+- `title` - the title of the post
+- `html` - the HTML rendering of the content of the post
+- `feature_image` - the source URL of the featured image of the post
+- `slug` - the slug of the post
 
 Now, we can render our posts to HTML.
 
