--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -152,7 +152,7 @@ Fetching via the content API returns an array of object that includes the follow
 - `feature_image` - the source URL of the featured image of the post
 - `slug` - the slug of the post
 
-Now, we can render our posts to HTML.
+Use the `posts` array returned from the fetch to display a list of blog posts on the page.
 
 ```astro title="src/pages/index.astro"
 <html lang="en">
