--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -155,6 +155,17 @@ Fetching via the content API returns an array of object that includes the follow
 Use the `posts` array returned from the fetch to display a list of blog posts on the page.
 
 ```astro title="src/pages/index.astro"
+---
+import { api } from '../lib/api';
+const posts = await api.posts
+    .browse({
+        limit: 'all',
+    })
+    .catch((err) => {
+        console.error(err);
+    });
+---
+
 <html lang="en">
     <head>
         <title>Astro + Ghost 👻</title>
