--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -201,9 +201,7 @@ The page `src/pages/post/[slug].astro` [dynamically generates a page](/en/core-c
 - package.json
 </FileTree>
 
-Just like the [index page](#displaying-a-list-of-posts), we'll first import our API instance. Following which, we'll have access to the `posts.browse()` method.
-
-Here, we're getting the posts and returning each single post in the [props](/en/tutorial/5-astro-api/2/#use-props-in-dynamic-routes).
+Import the API to access blog posts using `posts.browse()` and return a post as props to each of your dynamic routes. 
 
 ```astro title="src/pages/post/[slug].astro"
 ---
