--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -232,7 +232,7 @@ const { post } = Astro.props;
 ---
 ```
 
-Now, we can render the post in HTML.
+Create the template for each page using the properties of each `post` object.
 
 ```astro 
 <!DOCTYPE html>
