--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -235,6 +235,29 @@ const { post } = Astro.props;
 Create the template for each page using the properties of each `post` object.
 
 ```astro 
+---
+import { api } from '../../lib/api';
+export async function getStaticPaths() {
+    const posts = await api.posts
+        .browse({
+            limit: 'all',
+        })
+        .catch((err) => {
+            console.error(err);
+        });
+    return posts.map((post) => {
+        return {
+            params: {
+                slug: post.slug,
+            },
+            props: {
+                post: post,
+            },
+        };
+    });
+}
+const { post } = Astro.props;
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
